[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotb"
description = "Python-based chip (RTL) verification"
readme = "README.md"
license = "BSD-3-Clause"
license-files = [
    "LICENSE"
]
authors = [
    {name = "Chris Higgs"},
    {name = "Stuart Hodgson"},
]
maintainers = [
    {name = "Kaleb Barrett"},
    {name = "Tomasz Hemperek"},
    {name = "Marlon James"},
    {name = "Colin Marquardt"},
    {name = "Philipp Wagner"},
]
dependencies = [
    "find_libpython",
    "exceptiongroup; python_version < '3.11'",
]
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Framework :: cocotb",
]
dynamic = ["version"]

[project.scripts]
cocotb-config = "cocotb_tools.config:main"

[project.urls]
Homepage = "https://www.cocotb.org"
Documentation = "https://docs.cocotb.org"
Repository = "https://github.com/cocotb/cocotb"
Issues = "https://github.com/cocotb/cocotb/issues"


[tool.towncrier]
    package = "cocotb"
    directory = "docs/source/newsfragments"
    filename = "docs/source/release_notes.rst"
    issue_format = ":pr:`{issue}`"
    # The first underline is used for the version/date header,
    # the second underline for the subcategories (like 'Features')
    underlines = ["=", "-"]
    all_bullets = false

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Deprecations and Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "change"
        name = "Changes"
        showcontent = true

[tool.ruff]
extend-exclude = [
    "docs/source/conf.py",
    "makefiles",
    "venv",
    "_vendor",
    ".nox/",
]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "I",        # isort
    "UP",       # pyupgrade
    "PL",       # pylint
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "C4",       # flake8-comprehension
    "LOG",      # flake8-logging
    "G",        # flake8-logging-format
    "ISC",      # implicit string concat
    "TC",       # flake8-typechecking
    "SIM103",   # return the condition directly
    "SIM300",   # yoda conditions
    "RUF100",   # unused noqa
    "RUF101",   # redirected noqa
    "RUF010",   # explicit type conversion in f-string
    "RUF005",   # collection literal concatenation
    "RUF022",   # unsorted __all__
    "PERF101",  # unnecessary list cast
    "PERF102",  # unnecessary dict.items()
    "B007",     # unused loop variable
    "PYI030",   # unnecessary literal union
]
ignore = [
    "E741",    # ambiguous variable name (preference)
    "E501",    # line too long (preference)
    "PLR0912", # Too many branches (>12) (preference)
    "PLR0913", # Too many arguments to function call (>5) (preference)
    "PLR0915", # Too many statements (>50) (preference)
    "PLR2004", # Magic value used in comparison (preference)
    "PLW0603", # Using the global statement (preference)
    "PLR0911", # Too many return statements (preference)
    "PLW1641", # __eq__ without __hash__ (mypy compatibility)
    # The following 3 are ignored because sphinx doesn't set TYPE_CHECKING,
    # so it would fail to resolve any names imported in those blocks
    "TC001",   # typing-only first party import
    "TC002",   # typing-only third party import
    "TC003",   # typing-only standard library import
]

[tool.ruff.lint.per-file-ignores]
# necessary because of how file is included into documentation
"examples/doc_examples/quickstart/test_my_design.py" = [
    "E402",
    "F811",
]

[tool.ruff.lint.isort]
known-first-party = [
    "cocotb",
    "cocotb_tools",
    "pygpi",
]
known-third-party = [
    "pytest",
]
required-imports = ["from __future__ import annotations"]

[tool.cibuildwheel]
# Build for supported platforms only.
#
# - CPython on Linux x86_64 with glibc
# - CPython on Windows x86_64
# - CPython on macOS x86_64 and arm64
build = "cp*-manylinux_x86_64 cp*-win_amd64 cp*-macosx_x86_64 cp*-macosx_arm64"

# Build with optimizations and debugging
# -O2   Enables reasonable optimizations. -O3 is unnecessary with the virtual-call-heavy code in the GPI and may bloat binary size.
# -g    Generate standard debugging info.
# -flto Enable LTO which can reduce binary size and improve inlining.
environment = {CFLAGS = "-O2 -g -flto", CPPFLAGS = "-O2 -g -flto", LDFLAGS = "-O2 -g -flto"}

# By default, build on manylinux2014 for compatibility with CentOS/RHEL 8+
# and Ubuntu 20.04+ (with system Python).
manylinux-x86_64-image = "manylinux2014"

# Build with optimizations and debugging (Windows)
# /O2   Enables reasonable optimizations.
# /Z7   Enables debugging and places info in the binary (/Zi puts debug info in a different file).
# /Zo   Improves debugging when optimizations are also enabled.
# /LTCG Enables LTO which can reduce binary size and improve inlining.
[tool.cibuildwheel.windows]
environment = {CL = "/O2 /Z7 /Zo /LTCG"}

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --no-sanitize-rpaths --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.pytest.ini_options]
# Note: Do *not* add files within the cocotb/ tree here. Add them to the
# noxfile instead.
testpaths = [
    "tests/pytest",
]

# Ensure that all markers used in pytests are declared (in here).
addopts = "--strict-markers"

markers = [
    "simulator_required: mark tests as needing a simulator",
    "compile: the compile step in runner-based tests",
]
# log_cli = true
# log_cli_level = DEBUG

[tool.coverage.paths]
source = [
    "src/cocotb/",
    ".nox/**/cocotb/",
]

[tool.coverage.report]
omit = [
    "*/cocotb_tools/*",
    "*/_vendor/*",
]
exclude_lines = [
    # copy-pasted from coveragepy source
    # TODO when we can move to a newer version of coverage
    "#\\s*(pragma|PRAGMA)[:\\s]?\\s*(no|NO)\\s*(cover|COVER)",
    "^\\s*(((async )?def .*?)?\\)(\\s*->.*?)?:\\s*)?\\.\\.\\.\\s*(#|$)",
    "if (typing\\.)?TYPE_CHECKING:",
]

[tool.codespell]
ignore-words-list = [
    "AFE",
    "Synopsys",
    "afe",
    "afile",
    "alog",
    "ccompiler",
    "datas",
    "implementors",
    "inout",
    "nam",
    "sting",
    "synopsys",
]

skip = ["*.svg"]

[tool.mypy]
packages = ["cocotb", "pygpi", "cocotb_tools.pytest"]
modules = ["noxfile"]
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
show_error_codes = true
pretty = true

# TODO add lower bounds and justifications
[dependency-groups]
dev = [
    # required for development
    "pip>=25.1",  # 25.1 needed for '--groups'
    "nox",
    "pre-commit",
    # allows linting the project manually
    "clang-format",
    "mypy>=1.18",  # 1.18 needed for descriptor typing
    "ruff",
    # allows running tests and doing coverage reporting manually if desired
    {include-group = "dev_test"},
    {include-group = "coverage_report"},
]
docs = [
    "Sphinx ~= 8.2.0",
    "breathe",
    "sphinx-book-theme == 1.1.3",  # pin this to exact version to guard against any CSS changes
    "sphinx-design >= 0.6.1",
    "sphinxcontrib-svg2pdfconverter[CairoSVG]",
    "sphinxcontrib-domaintools @ git+https://github.com/ktbarrett/domaintools.git",
    "sphinxcontrib-makedomain",
    "sphinxcontrib-spelling >= 5.3.0",
    "pyenchant",
    "sphinx-issues",
    "sphinx-argparse-cli",
    "towncrier",
    "IPython",
    "enum-tools[sphinx]",
    "sphinx-codeautolink",
    "sphinx-argparse",
    "sphinx-autofixture",
    "pytest",
]
docs_preview = [
    {include-group = "docs"},
    "sphinx-autobuild",
]
release_build_wheel = [
    "cibuildwheel==3.2.1",
]
release_build_sdist = [
    "build",
]
test_common = [
    "pytest>=6"
]
dev_test = [
    {include-group = "test_common"},
    "coverage[toml]>=7.2",
    "pytest-cov",
]
coverage_report = [
    "coverage[toml]>=7.2",
    "gcovr==8.5",
]
release_test = [
    {include-group = "test_common"},

    # We have to disable the use of the PyPi index when installing cocotb to
    # guarantee that the wheels in dist are being used. But without an index
    # pip cannot find the dependencies, which need to be installed from PyPi.
    # Work around that by explicitly installing the dependencies first from
    # PyPi, and then installing cocotb itself from the local dist directory.
    "exceptiongroup; python_version<'3.11'",
    "find_libpython",
]

[tool.uv.dependency-groups]
# We need Python 3.11 to run Sphinx 8.2 and cibuildwheel 3.2
docs = {requires-python = ">=3.11"}
release_build_wheel = {requires-python = ">=3.11"}
